--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
     <h1>Промисификация</h1>
     <ul>
-      <li><a href="./task-1.html">Задание 1</a></li>
-      <li><a href="./task-2.html">Задание 2</a></li>
-      <li><a href="./task-3.html">Задание 3</a></li>
+      <li><a href="task-1.html">Задание 1</a></li>
+      <li><a href="task-2.html">Задание 2</a></li>
+      <li><a href="task-3.html">Задание 3</a></li>
     </ul>
   </body>
 </html>
